--- a/WebApplication1/WebApplication1/Views/Home/Contact.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Contact.cshtml
@@ -5,8 +5,8 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    Ameerpet, Hyderabad<br />
-    Telangan<br />
+    vizag, Hyderabad<br />
+    andhra<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
 </address>a
